--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html>
   <link rel="stylesheet" type="text/css" href="dist.css">
   <title>My Component</title>
-  <body>
+  <body class="sn-component">
     <script type="text/javascript" src="dist.js"></script>
   </body>
 </html>
