--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <link rel="stylesheet" type="text/css" href="dist.css">
-  <title>My Component</title>
+  <title>Extensions Manager</title>
   <body class="sn-component">
     <script type="text/javascript" src="dist.js"></script>
   </body>
